[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-analyzer"
version = "0.1.0"
description = "A tool for building and analyzing knowledge networks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Network Analyzer Team", email = "contact@example.com"},
]
keywords = ["network", "analysis", "wikipedia", "visualization", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Researchers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "networkx>=3.0",
    "requests>=2.25.0", 
    "requests-cache>=0.9.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "pyvis>=0.3.0",
    "tqdm>=4.60.0",
    "aiohttp>=3.8.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910",
]

[project.scripts]
network-analyzer = "scripts.main:main"
network-analyzer-unified = "scripts.unified_main:main"

[project.urls]
Homepage = "https://github.com/username/network-analyzer"
Documentation = "https://network-analyzer.readthedocs.io"
Repository = "https://github.com/username/network-analyzer"
"Bug Tracker" = "https://github.com/username/network-analyzer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
network_analyzer = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | outputs
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]