[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel"]

[project]
authors = [{ name = "Network Analyzer Team", email = "contact@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Researchers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
description = "A tool for building and analyzing knowledge networks"
keywords = ["network", "analysis", "wikipedia", "visualization", "graph"]
license = { text = "MIT" }
name = "network-analyzer"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

dependencies = [
    "networkx>=3.0",
    "requests>=2.25.0",
    "requests-cache>=0.9.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "pyvis>=0.3.0",
    "tqdm>=4.60.0",
    "aiohttp>=3.8.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910",
]

[project.scripts]
network-analyzer = "network_analyzer.scripts.main:main"
network-analyzer-unified = "network_analyzer.scripts.unified_main:main"

[project.urls]
"Bug Tracker" = "https://github.com/secantsquared/network-analyzer/issues"
Documentation = "https://network-analyzer.readthedocs.io"
Homepage = "https://github.com/secantsquared/network-analyzer"
Repository = "https://github.com/secantsquared/network-analyzer"

[tool.setuptools.packages.find]
where = ["src", "src/network_analyzer"]

[tool.setuptools.package-data]
network_analyzer = ["py.typed"]

[tool.black]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | outputs
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py38']

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
python_version = "3.8"
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
python_classes = ["Test*"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
